--- a/Person-Form/src/app/app.component.html
+++ b/Person-Form/src/app/app.component.html
@@ -1,1 +1,19 @@
 <router-outlet></router-outlet>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">CRUD App</a>
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav me-auto">
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/user-form">Crear Usuario</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/user-list">Lista de Usuarios</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  
+  <router-outlet></router-outlet>
+  
