--- a/Person-Form/src/app/components/user-list/user-list.component.html
+++ b/Person-Form/src/app/components/user-list/user-list.component.html
@@ -1,30 +1,60 @@
 <div class="container mt-4">
-    <h2>Lista de Usuarios</h2>
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th>Nombre</th>
-          <th>Apellido</th>
-          <th>Edad</th>
-          <th>Correo</th>
-          <th>Acciones</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let user of users">
-          <td>{{ user.nombre }}</td>
-          <td>{{ user.apellido }}</td>
-          <td>{{ user.edad }}</td>
-          <td>{{ user.correo }}</td>
-          <td>
-            <div class="button-container">
-              <button class="btn btn-danger" (click)="deleteUser(user.id)">Eliminar</button>
+  <h2>Lista de Usuarios</h2>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>Nombre</th>
+        <th>Apellido</th>
+        <th>Edad</th>
+        <th>Correo</th>
+        <th>Acciones</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let user of users">
+        <td>{{ user.nombre }}</td>
+        <td>{{ user.apellido }}</td>
+        <td>{{ user.edad }}</td>
+        <td>{{ user.correo }}</td>
+        <td>
+          <div class="button-container">
+            <button class="btn btn-danger" (click)="deleteUser(user.id)">Eliminar</button>
+            <button class="btn btn-primary" (click)="openEditModal(user, editModal)">Actualizar</button>
+          </div>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 
-              <button class="btn btn-danger" (click)="deleteUser(user.id)">Actualizar</button>
-            </div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-  
+  <!-- Modal para editar usuario -->
+  <ng-template #editModal let-modal>
+    <div class="modal-header">
+      <h4 class="modal-title">Editar Usuario</h4>
+      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss()">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
+
+        <div class="form-group">
+          <label for="nombre">Nombre</label>
+          <input type="text" id="nombre" formControlName="nombre" class="form-control" required>
+        </div>
+        <div class="form-group">
+          <label for="apellido">Apellido</label>
+          <input type="text" id="apellido" formControlName="apellido" class="form-control" required>
+        </div>
+        <div class="form-group">
+          <label for="edad">Edad</label>
+          <input type="number" id="edad" formControlName="edad" class="form-control" required>
+        </div>
+        <div class="form-group">
+          <label for="correo">Correo</label>
+          <input type="email" id="correo" formControlName="correo" class="form-control" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Guardar cambios</button>
+      </form>
+    </div>
+  </ng-template>
+</div>
