--- a/Person-Form/src/app/components/user-list/user-list.component.html
+++ b/Person-Form/src/app/components/user-list/user-list.component.html
@@ -7,6 +7,8 @@
         <th>Apellido</th>
         <th>Edad</th>
         <th>Correo</th>
+        <th>Teléfono</th>
+        <th>Dirección</th>
         <th>Acciones</th>
       </tr>
     </thead>
@@ -16,6 +18,8 @@
         <td>{{ user.apellido }}</td>
         <td>{{ user.edad }}</td>
         <td>{{ user.correo }}</td>
+        <td>{{ user.telefono }}</td>
+        <td>{{ user.direccion }}</td>
         <td>
           <div class="button-container">
             <button class="btn btn-danger" (click)="deleteUser(user.id)">Eliminar</button>
@@ -36,23 +40,36 @@
     </div>
     <div class="modal-body">
       <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
-
         <div class="form-group">
           <label for="nombre">Nombre</label>
           <input type="text" id="nombre" formControlName="nombre" class="form-control" required>
         </div>
+
         <div class="form-group">
           <label for="apellido">Apellido</label>
           <input type="text" id="apellido" formControlName="apellido" class="form-control" required>
         </div>
+
         <div class="form-group">
           <label for="edad">Edad</label>
           <input type="number" id="edad" formControlName="edad" class="form-control" required>
         </div>
+
         <div class="form-group">
           <label for="correo">Correo</label>
           <input type="email" id="correo" formControlName="correo" class="form-control" required>
         </div>
+
+        <div class="form-group">
+          <label for="telefono">Teléfono</label>
+          <input type="number" id="telefono" formControlName="telefono" class="form-control" required>
+        </div>
+
+        <div class="form-group">
+          <label for="direccion">Dirección</label>
+          <input type="text" id="direccion" formControlName="direccion" class="form-control" required>
+        </div>
+
         <button type="submit" class="btn btn-primary">Guardar cambios</button>
       </form>
     </div>
